# farmhand

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  db.py  email.py  farms.py  geocode.py  main.py  orm.py  schemas.py  time.py  weather.py
backend/app/domain/: __init__.py  models.py  rules.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 4ca33eadf1b0_add_farm_task_states.py  5478c98fc9ee_create_farm_schema.py  7ac49845d33b_add_crop_plantings.py  8f3e8f7b6e0a_add_farm_manual_tasks.py  e4e166da840d_add_farm_playbooks.py  ed6722bc329f_configure_succession_intervals.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_config.py  test_farm_api.py  test_farms.py  test_geocode.py  test_rules.py  test_weather.py
docs/: MATH_REVIEW.md  ROADMAP.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/e2e/: dashboard.spec.ts
frontend/src/: App.tsx  styles.css
