[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "farmhand-backend"
version = "0.1.0"
description = "Farmhand backend and farm rule engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
    "httpx2>=0.0.1",
    "pytest>=8.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
